Added print statements to show min/max for ordinal values

--- a/Intensional Gaps-Sem+Syn.ipynb
+++ b/Intensional Gaps-Sem+Syn.ipynb
@@ -6467,11 +6467,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 285,
    "metadata": {
     "tags": []
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.49998534470796585 0.5000054985284805\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -6624,7 +6631,7 @@
        "[270 rows x 5 columns]"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6673,16 +6680,25 @@
     "best_veridicality_locs_melt['label'] = best_veridicality_locs_melt.variable.map(cluster_labels)\n",
     "best_veridicality_locs_melt['inferencetype'] = 'veridicality'\n",
     "\n",
+    "print(min(best_veridicality_locs_melt.value), max(best_veridicality_locs_melt.value))\n",
+    "\n",
     "best_veridicality_locs_melt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 286,
    "metadata": {
     "tags": []
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5283526082833607 0.5284146157403786\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -6835,7 +6851,7 @@
        "[2235 rows x 5 columns]"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6882,6 +6898,8 @@
     "best_acceptability_locs_melt['value'] = np.sum(acceptability_pmf*acceptability_levels, axis=1)\n",
     "best_acceptability_locs_melt['label'] = best_acceptability_locs_melt.variable.map(cluster_labels)\n",
     "best_acceptability_locs_melt['inferencetype'] = 'acceptability'\n",
+    "\n",
+    "print(min(best_acceptability_locs_melt.value), max(best_acceptability_locs_melt.value))\n",
     "\n",
     "best_acceptability_locs_melt"
    ]
